// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead renders Typeahead normal 1`] = `
<div
  className="box relative"
  style={
    Object {
      "minWidth": 280,
    }
  }
>
  <span>
    <label
      className="label"
      htmlFor="typeahead-test"
    >
      <div
        className="formLabel"
      >
        <div
          className="Text fontSize1 darkGray alignStart breakWord fontWeightNormal"
        >
          Typeahead Example
        </div>
      </div>
    </label>
    <div
      className="box relative"
    >
      <input
        aria-activedescendant="test-item-0"
        aria-autocomplete="list"
        aria-controls="test"
        aria-describedby={null}
        aria-expanded={false}
        aria-haspopup={true}
        aria-invalid="false"
        aria-owns="test"
        autoComplete="list"
        className="textField base enabled normal medium actionButton truncate"
        disabled={false}
        id="typeahead-test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a Label"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="actionButtonContainer"
      >
        <div
          className="box circle itemsCenter marginEnd2 xsDisplayFlex"
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <div
            aria-disabled={false}
            aria-label="Show popup"
            className="hideOutline tapTransition circle accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="box circle paddingX1 paddingY1"
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="icon darkGray iconBlock"
                height={12}
                role="img"
                viewBox="0 0 24 24"
                width={12}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`Typeahead renders tags when supplied 1`] = `
<div
  className="box relative"
  style={
    Object {
      "minWidth": 280,
    }
  }
>
  <span>
    <label
      className="label"
      htmlFor="typeahead-test"
    >
      <div
        className="formLabel"
      >
        <div
          className="Text fontSize1 darkGray alignStart breakWord fontWeightNormal"
        >
          Tag Example
        </div>
      </div>
    </label>
    <div
      className="box relative"
    >
      <div
        className="textField base enabled normal large actionButton textFieldWrapper"
      >
        <div
          className="box marginBottom1 marginEnd1"
        >
          <div
            aria-disabled={false}
            className="box lightGrayBg rounding2 xsDisplayInlineBlock"
            style={
              Object {
                "height": 32,
                "maxWidth": 300,
              }
            }
          >
            <div
              className="Flex rowGap0 itemsCenter xsDirectionRow"
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <div
                className="box marginEnd2 marginStart0"
              />
              <div
                className="truncate"
                title="a"
              >
                <span
                  className="Text fontSize2 darkGray alignStart breakWord fontWeightNormal"
                >
                  a
                </span>
              </div>
              <div
                className="box marginStart1"
              >
                <button
                  className="button lightGray hideOutline tapTransition accessibilityOutline"
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={null}
                    aria-label="Remove a tag"
                    className="icon darkGray iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box marginBottom1 marginEnd1"
        >
          <div
            aria-disabled={false}
            className="box lightGrayBg rounding2 xsDisplayInlineBlock"
            style={
              Object {
                "height": 32,
                "maxWidth": 300,
              }
            }
          >
            <div
              className="Flex rowGap0 itemsCenter xsDirectionRow"
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <div
                className="box marginEnd2 marginStart0"
              />
              <div
                className="truncate"
                title="b"
              >
                <span
                  className="Text fontSize2 darkGray alignStart breakWord fontWeightNormal"
                >
                  b
                </span>
              </div>
              <div
                className="box marginStart1"
              >
                <button
                  className="button lightGray hideOutline tapTransition accessibilityOutline"
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={null}
                    aria-label="Remove b tag"
                    className="icon darkGray iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box marginBottom1 marginEnd1"
        >
          <div
            aria-disabled={false}
            className="box lightGrayBg rounding2 xsDisplayInlineBlock"
            style={
              Object {
                "height": 32,
                "maxWidth": 300,
              }
            }
          >
            <div
              className="Flex rowGap0 itemsCenter xsDirectionRow"
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <div
                className="box marginEnd2 marginStart0"
              />
              <div
                className="truncate"
                title="c"
              >
                <span
                  className="Text fontSize2 darkGray alignStart breakWord fontWeightNormal"
                >
                  c
                </span>
              </div>
              <div
                className="box marginStart1"
              >
                <button
                  className="button lightGray hideOutline tapTransition accessibilityOutline"
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={null}
                    aria-label="Remove c tag"
                    className="icon darkGray iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box flexGrow marginEnd2 relative"
          style={
            Object {
              "maxWidth": "100%",
            }
          }
        >
          <div
            aria-hidden={true}
            className="textFieldSpacer"
          >
            
          </div>
          <input
            aria-activedescendant="test-item-0"
            aria-autocomplete="list"
            aria-controls="test"
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup={true}
            aria-invalid="false"
            aria-owns="test"
            autoComplete="list"
            className="unstyledTextField"
            disabled={false}
            id="typeahead-test"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            role="combobox"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="actionButtonContainer"
      >
        <div
          className="box circle itemsCenter marginEnd2 xsDisplayFlex"
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <div
            aria-disabled={false}
            aria-label="Show popup"
            className="hideOutline tapTransition circle accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="box circle paddingX1 paddingY1"
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="icon darkGray iconBlock"
                height={12}
                role="img"
                viewBox="0 0 24 24"
                width={12}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;
